# ipl-grpo

./: .gitignore  COLAB.md  PLAN.md  README.md  SFT_ANCHOR_LABELING.md  SFT_GOLD_LABELING.md  TRAINING.md  WORKFLOW.md  pyproject.toml  requirements-train-colab.txt
data/manual/: sft_anchor_review_pack_v1.blank_backup.csv  sft_anchor_review_pack_v1.csv  sft_gold_review_pack_v1.blank_backup.csv  sft_gold_review_pack_v1.csv
scripts/: check_sft_outputs.py  colab_prepare_and_run.py  eval_sft_checkpoint.py
src/ipl_reasoner/: __init__.py  cli.py  constants.py  grpo_train.py  paths.py  player_stats.py  preprocess.py  prompt_format.py  qa.py  raw_data.py  sft.py  sft_train.py  snapshots.py  training_dataset.py  venue_data.py
